--- a/08-lab-socket-hunt/Makefile
+++ b/08-lab-socket-hunt/Makefile
@@ -1,11 +1,11 @@
 CC = gcc
-CFLAGS = -Wall -O2 -g
+CFLAGS = -Wall -O2 -g -I ../include/
 
 all: treasure_hunter
 .PHONY: all
 
 treasure_hunter: treasure_hunter.c
-	$(CC) $(CFLAGS) -o treasure_hunter treasure_hunter.c
+	$(CC) $(CFLAGS) -o treasure_hunter treasure_hunter.c ../code/sockhelper.c
 
 .PHONY: clean
 clean:
