--- a/08-lab-socket-hunt/Makefile
+++ b/08-lab-socket-hunt/Makefile
@@ -4,7 +4,7 @@ CFLAGS = -Wall -O2 -g -I ../include/
 all: treasure_hunter
 .PHONY: all
 
-treasure_hunter: treasure_hunter.c
+treasure_hunter: treasure_hunter.c ../code/sockhelper.c
 	$(CC) $(CFLAGS) -o treasure_hunter treasure_hunter.c ../code/sockhelper.c
 
 .PHONY: clean
