Use common code

--- a/07-hw-sockets/Makefile
+++ b/07-hw-sockets/Makefile
@@ -4,10 +4,10 @@ CFLAGS = -Wall -O2 -g -I ../include/
 .PHONY: all
 all: client server
 
-client: client.c
+client: client.c ../code/sockhelper.c
 	$(CC) $(CFLAGS) -o client client.c ../code/sockhelper.c
 
-server: server.c
+server: server.c ../code/sockhelper.c
 	$(CC) $(CFLAGS) -o server server.c ../code/sockhelper.c
 
 .PHONY: clean
