Update echoservere.c to use helper files

--- a/11b-hw-iomultiplex/Makefile
+++ b/11b-hw-iomultiplex/Makefile
@@ -1,11 +1,11 @@
 CC = gcc
-CFLAGS = -Wall -O2 -g
+CFLAGS = -Wall -O2 -g -I ../include/
 
 .PHONY: all
 all: echoservere
 
-echoserveri: echoservere.c
-	$(CC) $(CFLAGS) -o echoservere echoservere.c
+echoservere: echoservere.c ../code/sockhelper.c
+	$(CC) $(CFLAGS) -o echoservere echoservere.c ../code/sockhelper.c
 
 .PHONY: clean
 clean:
